crates/aranya-policy-compiler/tests/data/actions/wrong_arg_count_bad_argument.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: bad argument
  |
3 |     action bar()
  |     ^^^^^^^^^^^^ call to `bar` has 0 arguments, but it should have 1
